Restore the mainline implementation of Objects.equal removing the condition on --enable-preview. Correct the .equals method of SimplValueGraphs.SimpleValue. Revert "8366841: [lworld] Objects.equals without identity comparison"