@@ -26,7 +26,6 @@
 package java.util;
 
 import jdk.internal.javac.PreviewFeature;
-import jdk.internal.misc.PreviewFeatures;
 import jdk.internal.util.Preconditions;
 import jdk.internal.vm.annotation.ForceInline;
 
@@ -62,12 +61,7 @@ public final class Objects {
      */
     @ForceInline
     public static boolean equals(Object a, Object b) {
-        if (PreviewFeatures.isEnabled()) {
-            // With --enable-preview avoid acmp
-            return (a == null) ? b == null : a.equals(b);
-        } else {
-            return (a == b) || (a != null && a.equals(b));
-        }
+        return (a == b) || (a != null && a.equals(b));
     }
 
    /**
